# gtd_poc

./: .gitignore  README.md  pyproject.toml
src/gtd_poc/: agents.py  db.py  main.py
